ハードウェア制御プログラムとの通信方法を変更した